<resources>
    <string name="app_name">CS-Controller</string>

    <string name="hello">Hello</string>

    <string name="author">By XShe</string>

    <string name="info_f">关于权限以及其他事项的说明</string>

    <string name="first_info">
        CS-Controller(下称本应用)，用于辅助调控MoWei所开发的CS调度(下称调度)模块。
        \n由调度所使用的Apache2.0开源协议，本应用或包含一部分该模块源代码，在此特意声明(非必要)。
        \n同时，本应用也通过GPL-3协议开源，因此对于本应用的改版、引用以及任何使用本应用源码的行为，都应标明原作者及出处。
        \n项目开源地址:https://github.com/XSheeee/CS-Controller
        \n本应用目前申请使用了对于手机内部文件的读写权限以及root权限，分别用于改变调度配置以及获取顶层应用。
        \n使用本应用或许会导致你的手机出现无法启动、自动重启、黑屏、闪退、卡顿等bug，再次特意声明，可选择是否使用。
        \n本应用图标生成自阿里-通义，本人仅稍作修改，特此声明。
    </string>

    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="search_idea">在此处搜索应用</string>
    <string name="search">在此处搜索\n</string>

    <string name="go_back"> <![CDATA[<—]]></string>

    <string name="select_mode">模式选择</string>

    <string name="app_list_title">APP单独配置</string>

    <string name="about_and_support">关于与捐赠</string>
    <string name="jz_MW">给魔威(CS调度作者，A0后台保活作者，FreezeitLambda等项目维护者)的捐赠</string>
    <string name="jz_XS">给XShe(CS调度管理器作者，IceFreezer(真的没被毙掉?),FreezeitLambda(真的还有关注?)等项目维护者)的捐赠</string>

    <string name="string_powersave_mode">省电模式</string>
    <string name="string_balance_mode">均衡模式</string>
    <string name="string_performance_mode">性能模式</string>
    <string name="string_fast_mode">极速模式</string>
    <string name="string_super_powersave_mode">超级省电</string>
    <string name="string_app_list_config">配置应用</string>

    <string name="about_mw_cpuspeedcontroller">CS调度</string>
    <string name="about_cs_ontroller">CS-Controller</string>
    

    <string-array name="modes">
        <item>powersave</item>
        <item>balance</item>
        <item>performance</item>
        <item>fast</item>
        <item>super_powersave</item>
    </string-array>
</resources>